# Robust-Dental-CLIP

./: .gitignore  README.md  demo.py  pyproject.toml
scripts/: test_all.sh
src/eval/: eval.py
src/inference/: dental_inference.py  dental_inference_dir.py  zero_shot.py
src/models/: clip.py  image_encoder.py  text_encoder.py
src/preprocessing/: dental_crop.py
src/training/: clip_finetune.py  dental_finetune.py
src/utils/: losses.py
