[project]
name = "Robust Dental-CLIP"
version = "0.1.0"
description = "Robust Dental-CLIP via Noise Curriculum Learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.12.0.88",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
    "ultralytics>=8.3.226",
]
